@@ -1,11 +1,17 @@
 /**
- * Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
+ * Copyright Pravega Authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package io.pravega.client.stream.impl;
 
@@ -94,7 +100,7 @@ public class EventStreamReaderTest {
     }
 
     @Test(timeout = 10000)
-    public void testEndOfSegmentWithoutSuccessors() throws SegmentSealedException, ReaderNotInReaderGroupException {
+    public void testEndOfSegmentWithoutSuccessors() throws ReaderNotInReaderGroupException {
         AtomicLong clock = new AtomicLong();
         MockSegmentStreamFactory segmentStreamFactory = new MockSegmentStreamFactory();
         Orderer orderer = new Orderer();
@@ -253,19 +259,19 @@ public class EventStreamReaderTest {
         ByteBuffer buffer3 = writeInt(stream, 3);
         EventRead<byte[]> e = reader.readNextEvent(0);
         assertEquals(buffer1, ByteBuffer.wrap(e.getEvent()));
-        assertEquals(new Long(WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES),
+        assertEquals(Long.valueOf(WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES),
                 e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
         e = reader.readNextEvent(0);
         assertEquals(buffer2, ByteBuffer.wrap(e.getEvent()));
-        assertEquals(new Long(2 * (WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES)),
+        assertEquals(Long.valueOf(2 * (WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES)),
                 e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
         e = reader.readNextEvent(0);
         assertEquals(buffer3, ByteBuffer.wrap(e.getEvent()));
-        assertEquals(new Long(3 * (WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES)),
+        assertEquals(Long.valueOf(3 * (WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES)),
                 e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
         e = reader.readNextEvent(0);
         assertNull(e.getEvent());
-        assertEquals(new Long(-1), e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
+        assertEquals(Long.valueOf(-1), e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
         reader.close();
     }
 
@@ -316,7 +322,7 @@ public class EventStreamReaderTest {
         reader.close();
     }
 
-    private ByteBuffer writeInt(SegmentOutputStream stream, int value) throws SegmentSealedException {
+    private ByteBuffer writeInt(SegmentOutputStream stream, int value) {
         ByteBuffer buffer = ByteBuffer.allocate(4).putInt(value);
         buffer.flip();
         stream.write(PendingEvent.withHeader(null, buffer, new CompletableFuture<Void>()));
@@ -703,13 +709,13 @@ public class EventStreamReaderTest {
         ByteBuffer buffer1 = writeInt(stream, 1);
         ByteBuffer buffer2 = writeInt(stream, 2);
         writeInt(stream, 3);
-        long length = metadataClient.fetchCurrentSegmentLength();
+        long length = metadataClient.fetchCurrentSegmentLength().join();
         assertEquals(0, length % 3);
         EventRead<byte[]> event1 = reader.readNextEvent(0);
         assertEquals(buffer1, ByteBuffer.wrap(event1.getEvent()));
-        metadataClient.truncateSegment(length / 3);
+        metadataClient.truncateSegment(length / 3).join();
         assertEquals(buffer2, ByteBuffer.wrap(reader.readNextEvent(0).getEvent()));
-        metadataClient.truncateSegment(length);
+        metadataClient.truncateSegment(length).join();
         ByteBuffer buffer4 = writeInt(stream, 4);
         assertThrows(TruncatedDataException.class, () -> reader.readNextEvent(0));
         assertEquals(buffer4, ByteBuffer.wrap(reader.readNextEvent(0).getEvent()));
